feat(docker): enable build-time seeding, create dto object and fix db permissions
